# metadata-guardian

./: Cargo.toml  Dockerfile  README.adoc  config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python_build.yml  release.yml  rust_build.yml
python/: .buildinfo  .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  api_reference.html  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  usage.html
python/_sources/: api_reference.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
python/docs/source/: api_reference.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
python/docs/source/_ext/: edit_on_github.py
python/examples/: README.md  scan_external_sources_custom_data_rules.py  scan_external_sources_custom_path_data_rules.py  scan_external_sources_database.py  scan_external_sources_database_async.py  scan_external_sources_table.py  scan_local_sources.py  test.sh
python/metadata_guardian/: __init__.py  conf.py  data_rules.py  exceptions.py  report.py  scanner.py  test.json  test2.json
python/metadata_guardian/cli/: __init__.py
python/metadata_guardian/cli/local/: __init__.py
python/metadata_guardian/rules/: inclusion_rules.yaml
python/metadata_guardian/source/: __init__.py  metadata_source.py
python/metadata_guardian/source/local/: avro_schema_source.py  avro_source.py  local_file_source.py  local_metadata_source.py  orc_source.py  parquet_source.py
python/src/: lib.rs
python/stubs/avro/: datafile.pyi  io.pyi
python/stubs/avro/schema/: __init__.pyi
python/stubs/confluent_kafka/: schema_registry.pyi
python/stubs/deltalake/: __init__.pyi
python/stubs/google/: cloud.pyi
python/stubs/metadata_guardian/: __init__.pyi  metadata_guardian.pyi
python/stubs/pyarrow/: __init__.pyi  dataset.pyi  fs.pyi  orc.pyi
python/stubs/rich/: console.pyi  table.pyi
python/stubs/snowflake/: connector.pyi
python/stubs/snowflake/connector/: __init__.pyi  converter_null.pyi
python/tests/: conftest.py  test_data_rules.py  test_native_binding.py  test_report.py  test_scanner.py
python/tests/cli/: test_cli.py
python/tests/local/: test_avro_schema_source.py  test_avro_source.py  test_orc_source.py  test_parquet_source.py
python/tests/resources/: inclusion_violation.txt  subscriptions.parquet  users.avro  users_avro_schema.json
python/tests/source/: test_metadata_source.py
python/tests/source/local/: test_avro_schema_source.py  test_avro_source.py  test_parquet_source.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  metadata_guardian.rs
rust/src/rules/: pii_rules.yaml
rust/tests/: data_guardian_test.rs
rust/tests/resources/: inclusion_violations.txt  pii_rules.yaml
