[package]
name = "metadata_guardian-python"
version = "0.3.0"
authors = ["Florian Valeye <fvaleye@github.com>"]
homepage = "https://fvaleye.github.io/metadata-guardian/python"
license = "Apache-2.0"
description = "Metadata Guardian Python binding"
edition = "2021"
keywords = ["pii", "inclusion", "biais", "metadata_dataguardian", "metadata", "guardian"]

[lib]
name = "metadata_guardian"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0"

[dependencies.pyo3]
version = "0.27.0"
features = ["extension-module", "abi3", "abi3-py39"]

[dependencies.metadata_guardian]
path = "../rust"
version = "0"