[package]
name = "metadata_guardian"
version = "0.0.1"
authors = ["Florian Valeye <fvaleye@github.com>"]
homepage = ""
license = "Apache-2.0"
keywords = ["pii", "inclusion", "biais", "metadata_dataguardian", "metadata", "guardian"]
description = "MetadataGuardian is used to protect data by searching the source metadata."
edition = "2021"

[dependencies]
regex = { version = "1.5.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.21"
thiserror = "1"
rayon = "1"

[dev-dependencies]
pretty_assertions = "0"
cargo-tarpaulin = "0"
