[package]
name = "metadata_guardian"
version = "0.0.1"
authors = ["Florian Valeye <fvaleye@github.com>"]
homepage = ""
license = "Apache-2.0"
keywords = ["pii", "inclusion", "biais", "metadata_dataguardian", "metadata", "guardian"]
description = "MetadataGuardian is used to protect data by searching the source metadata."
edition = "2021"

[dependencies]
regex = { version = "1.10.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "2.0.15"
rayon = "1"

[dev-dependencies]
pretty_assertions = "1"
cargo-tarpaulin = "0"
